k8s/ingress/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: transactions
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: "keycloak.127-0-0-1.nip.io"
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: keycloak
              port:
                number: 8082
