k8s/ingress/transactions-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transactions-server-ingress
  namespace: transactions
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: "transactions.127-0-0-1.nip.io"
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: transactions-server
              port:
                number: 8080
